# mario

./: .gitignore  Cargo.toml  README.md
collector/: Cargo.toml
collector/src/: cpu.rs  lib.rs  mem.rs  registry.rs
core/: Cargo.toml
core/src/: errors.rs  lib.rs
mario-core/: Cargo.toml
mario-core/src/: lib.rs
provider/: Cargo.toml
provider/src/: lib.rs
provider/src/connector/: docker.rs  errors.rs  mod.rs  models.rs
storage/: Cargo.toml
storage/src/: lib.rs
