[package]
name = "mario"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }
provider = {path = "provider"}
collector = {path = "collector"}
storage = {path = "storage"}
clap = "2.31.0"
futures = "0.3"

[workspace]
members = [
    "core",
    "storage",
    "provider",
    "collector"
]