[package]
name = "provider"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyperlocal = "0.8"
hyper = { version = "0.14", features = ["client", "http1", "runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"